--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -1,10 +1,14 @@
 <mat-sidenav-container>
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="130" fixedBottomGap="40">
         <mat-nav-list class="nav-list">
-            <a mat-list-item>Pedidos</a>
-            <a mat-list-item>Pedidos</a>
-            <a mat-list-item>Pedidos</a>
-            <a mat-list-item>Pedidos</a>
+            <a mat-list-item [routerlink]="[/pedido]">Pedidos</a>
+            <a mat-list-item [routerlink]="[/endereco]">Endereços</a>
+            <a mat-list-item [routerlink]="[/itens]">Itens</a>
+            <a mat-list-item [routerlink]="[/maquina-lavar]">Maquinas de Lavar</a>
+            <a mat-list-item [routerlink]="[/prancha-passar]">Pranchas de Passar</a>
+            <a mat-list-item [routerlink]="[/secadora]">Secadora</a>
+            <a mat-list-item [routerlink]="[/users]">Usuários Cadastrados</a>
+            <a mat-list-item [routerlink]="[/funcionario]">Funcionários</a>
 
 
         </mat-nav-list>
