--- a/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
+++ b/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
@@ -1,17 +1,9 @@
-<h1>{{ title }}</h1>
+<h1>Dados do Cliente</h1>
 <form class="std-form" #f="ngForm" (ngSubmit)="salvar(f)">
 
     <mat-form-field>
         <mat-label>Nome do Cliente</mat-label>
         <input matInput placeholder="Informe o nome do cliente" [(ngModel)]="cliente.nome" name="nome" required>
-    </mat-form-field>
-
-    <mat-form-field>
-        <mat-label>Data de nascimento</mat-label>
-        <input matInput [matDatepicker]="dataNascimento" name="data_nascimento" [(ngModel)]="cliente.data_nascimento"
-            placeholder="Informe a data de nascimento" required>
-        <mat-datepicker-toggle matSuffix [for]="dataNascimento"></mat-datepicker-toggle>
-        <mat-datepicker #dataNascimento></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
@@ -27,8 +19,11 @@
     </mat-form-field>
 
     <mat-form-field>
-        <mat-label>Endereço</mat-label>
-        <input matInput type="string" [(ngModel)]="cliente.endereco" name="endereco" required>
+        <mat-label>Data de nascimento</mat-label>
+        <input matInput [matDatepicker]="dataNascimento" name="data_nascimento" [(ngModel)]="cliente.data_nascimento"
+            placeholder="Informe a data de nascimento" required>
+        <mat-datepicker-toggle matSuffix [for]="dataNascimento"></mat-datepicker-toggle>
+        <mat-datepicker #dataNascimento></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
@@ -39,6 +34,22 @@
     <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="string" [(ngModel)]="cliente.email" name="email" required>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Data de criação</mat-label>
+        <input matInput [matDatepicker]="createdAt" name="createdAt" [(ngModel)]="cliente.createdAt"
+            placeholder="Informe a data de criação" required>
+        <mat-datepicker-toggle matSuffix [for]="createdAt"></mat-datepicker-toggle>
+        <mat-datepicker #dataNascimento></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Data de atualização</mat-label>
+        <input matInput [matDatepicker]="updatedAt" name="updatedAt" [(ngModel)]="cliente.updatedAt"
+            placeholder="Informe a data do update" required>
+        <mat-datepicker-toggle matSuffix [for]="updatedAt"></mat-datepicker-toggle>
+        <mat-datepicker #dataNascimento></mat-datepicker>
     </mat-form-field>
 
 
