--- a/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
+++ b/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
@@ -1,5 +1,5 @@
 <h1>Dados do Cliente</h1>
-<form class="std-form" #f="ngForm" (ngSubmit)="salvar(f)">
+<form class="std-form" #f="ngForm" (ngSubmit)="salva(f)">
 
     <mat-form-field>
         <mat-label>Nome do Cliente</mat-label>
@@ -35,23 +35,6 @@
         <mat-label>Email</mat-label>
         <input matInput type="string" [(ngModel)]="cliente.email" name="email" required>
     </mat-form-field>
-
-    <mat-form-field>
-        <mat-label>Data de criação</mat-label>
-        <input matInput [matDatepicker]="createdAt" name="createdAt" [(ngModel)]="cliente.createdAt"
-            placeholder="Informe a data de criação" required>
-        <mat-datepicker-toggle matSuffix [for]="createdAt"></mat-datepicker-toggle>
-        <mat-datepicker #dataNascimento></mat-datepicker>
-    </mat-form-field>
-
-    <mat-form-field>
-        <mat-label>Data de atualização</mat-label>
-        <input matInput [matDatepicker]="updatedAt" name="updatedAt" [(ngModel)]="cliente.updatedAt"
-            placeholder="Informe a data do update" required>
-        <mat-datepicker-toggle matSuffix [for]="updatedAt"></mat-datepicker-toggle>
-        <mat-datepicker #dataNascimento></mat-datepicker>
-    </mat-form-field>
-
 
     <mat-toolbar class="form-buttons">
         <mat-toolbar-row>
