--- a/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
+++ b/frontend/src/app/views/cliente/cliente-form/cliente-form.component.html
@@ -3,7 +3,8 @@
 
     <mat-form-field>
         <mat-label>Nome do Cliente</mat-label>
-        <input matInput placeholder="Informe o nome do cliente" [(ngModel)]="cliente.nome" name="nome" required>
+        <input matInput type="string" placeholder="Informe o nome do cliente" [(ngModel)]="cliente.nome" name="nome"
+            required>
     </mat-form-field>
 
     <mat-form-field>
