--- a/frontend/src/app/views/maquina-lavar/maquina-lavar-list/maquina-lavar-list.component.html
+++ b/frontend/src/app/views/maquina-lavar/maquina-lavar-list/maquina-lavar-list.component.html
@@ -25,13 +25,13 @@
     </ng-container>
 
     <!-- Marca Column -->
-    <ng-container matColumnDef="modelo">
+    <ng-container matColumnDef="marca">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Marca </th>
         <td mat-cell class="cell-align-center" *matCellDef="let maquina_lavar"> {{ maquina_lavar.marca }} </td>
     </ng-container>
 
     <!-- PesoMax Column -->
-    <ng-container matColumnDef="peso_max">
+    <ng-container matColumnDef="peso_maximo">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Peso Máximo </th>
         <td mat-cell class="cell-align-center" *matCellDef="let maquina_lavar"> {{ maquina_lavar.peso_maximo }} </td>
     </ng-container>
