--- a/frontend/src/app/views/prancha-passar/prancha-passar-form/prancha-passar-form.component.html
+++ b/frontend/src/app/views/prancha-passar/prancha-passar-form/prancha-passar-form.component.html
@@ -8,7 +8,7 @@
 
     <mat-form-field>
         <mat-label>Marca</mat-label>
-        <input matInput type="string" [(ngModel)]="prancha_passar.carca" name="marca" required>
+        <input matInput type="string" [(ngModel)]="prancha_passar.marca" name="marca" required>
     </mat-form-field>
 
     <mat-form-field>
