--- a/frontend/src/app/views/maquina-lavar/maquina-lavar-form/maquina-lavar-form.component.html
+++ b/frontend/src/app/views/maquina-lavar/maquina-lavar-form/maquina-lavar-form.component.html
@@ -8,7 +8,7 @@
 
     <mat-form-field>
         <mat-label>Marca</mat-label>
-        <input matInput type="string" [(ngModel)]="maquina_lavar.carca" name="marca" required>
+        <input matInput type="string" [(ngModel)]="maquina_lavar.marca" name="marca" required>
     </mat-form-field>
 
     <mat-form-field>
