--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -1,9 +1,9 @@
-<!--<form [formGroup]="form" (submit)="signin()">
-    <h1 class="h3 mb-3 fw-normal">Logue-se por favor</h1>
+<!--<form [formGroup]="form" (submit)="submit()">
+    <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
 
-    <input formControlName="email" type="email" class="form-control" placeholder="Digite seu email" required>
+    <input formControlName="email" type="email" class="form-control" placeholder="Email" required>
 
-    <input formControlName="password" type="password" class="form-control" placeholder="Digite sua senha" required>
+    <input formControlName="password" type="password" class="form-control" placeholder="Password" required>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
-</form>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+</form>-->
