--- a/frontend/src/app/views/registro/registro.component.html
+++ b/frontend/src/app/views/registro/registro.component.html
@@ -1,1 +1,11 @@
-<p>registro works!</p>
+<form [formGroup]="form" (submit)="submit()">
+    <h1 class="h3 mb-3 fw-normal">Registre-se!</h1>
+
+    <input formControlName="name" type="name" class="form-control" placeholder="Nome Completo" required>
+
+    <input formControlName="email" type="email" class="form-control" placeholder="Insira seu email" required>
+
+    <input formControlName="password" type="password" class="form-control" placeholder="Digite uma senha" required>
+
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Registre-se</button>
+</form>
