--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -37,23 +37,17 @@
                 </i>
                 Secadoras
             </a>
-            <a mat-list-item routerLink="/itens">
+            <a mat-list-item routerLink="/item">
                 <i class="material-icons">
                     add_shopping_cart
                 </i>
                 Itens
             </a>
-            <a mat-list-item routerLink="/users">
+            <a mat-list-item routerLink="/user">
                 <i class="material-icons">
                     add_shopping_cart
                 </i>
                 Usuários
-            </a>
-            <a mat-list-item routerLink="/funcionario">
-                <i class="material-icons">
-                    add_shopping_cart
-                </i>
-                Funcionários
             </a>
         </mat-nav-list>
     </mat-sidenav>
