--- a/frontend/src/app/views/pedido/pedido-list/pedido-list.component.html
+++ b/frontend/src/app/views/pedido/pedido-list/pedido-list.component.html
@@ -52,9 +52,9 @@
     </ng-container>
 
     <!-- Itens Column -->
-    <ng-container matColumnDef="itens">
+    <ng-container matColumnDef="item">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Itens </th>
-        <td mat-cell class="cell-align-center" *matCellDef="let pedido"> {{ pedido.itens?.numero }} </td>
+        <td mat-cell class="cell-align-center" *matCellDef="let pedido"> {{ pedido.item?.numero }} </td>
     </ng-container>
 
     <!-- Maquina Column -->
