--- a/frontend/src/app/views/secadora/secadora-list/secadora-list.component.html
+++ b/frontend/src/app/views/secadora/secadora-list/secadora-list.component.html
@@ -50,7 +50,7 @@
     <ng-container matColumnDef="deletar">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef>Deletar</th>
         <td mat-cell class="cell-align-center" *matCellDef="let secadora">
-            <button mat-raised-button color="warn" title="Deletar" (click)="deletar(secadoras.id)">
+            <button mat-raised-button color="warn" title="Deletar" (click)="deletar(secadora.id)">
                 <mat-icon>delete_forever</mat-icon>
             </button>
         </td>
