--- a/frontend/src/app/views/maquina-lavar/maquina-lavar-list/maquina-lavar-list.component.html
+++ b/frontend/src/app/views/maquina-lavar/maquina-lavar-list/maquina-lavar-list.component.html
@@ -50,7 +50,7 @@
     <ng-container matColumnDef="deletar">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef>Deletar</th>
         <td mat-cell class="cell-align-center" *matCellDef="let maquina_lavar">
-            <button mat-raised-button color="warn" title="Deletar" (click)="deletar(maquinas_lavar.id)">
+            <button mat-raised-button color="warn" title="Deletar" (click)="deletar(maquina_lavar.id)">
                 <mat-icon>delete_forever</mat-icon>
             </button>
         </td>
