--- a/frontend/src/app/views/endereco/endereco-form/endereco-form.component.html
+++ b/frontend/src/app/views/endereco/endereco-form/endereco-form.component.html
@@ -40,6 +40,11 @@
         </mat-select>
     </mat-form-field>
 
+    <!--<mat-form-field>
+        <mat-label>Cliente</mat-label>
+        <input matInput type="string"  placeholder="Informe o nome do Cliente" name="cliente" value={{clientes.nome}} required>
+    </mat-form-field>-->
+
 
     <mat-toolbar class="form-buttons">
         <mat-toolbar-row>
