--- a/frontend/src/app/views/endereco/endereco-list/endereco-list.component.html
+++ b/frontend/src/app/views/endereco/endereco-list/endereco-list.component.html
@@ -45,7 +45,7 @@
     <!-- Cliente Column -->
     <ng-container matColumnDef="cliente">
         <th mat-header-cell class="cell-align-center" *matHeaderCellDef> Cliente </th>
-        <td mat-cell class="cell-align-center" *matCellDef="let endereco"> {{ endereco.cliente?.nome }} </td>
+        <td mat-cell class="cell-align-center" *matCellDef="let endereco"> {{ endereco?.nome}} </td>
     </ng-container>
 
 
