--- a/frontend/src/app/views/maquina-lavar/maquina-lavar-form/maquina-lavar-form.component.html
+++ b/frontend/src/app/views/maquina-lavar/maquina-lavar-form/maquina-lavar-form.component.html
@@ -18,7 +18,7 @@
 
     <mat-form-field>
         <mat-label>Peso Máximo</mat-label>
-        <input matInput type="number" [(ngModel)]="maquina_lavar.peso_max" name="peso_maximo" required>
+        <input matInput type="number" [(ngModel)]="maquina_lavar.peso_maximo" name="peso_maximo" required>
     </mat-form-field>
 
     <mat-toolbar class="form-buttons">
