--- a/frontend/src/app/views/secadora/secadora-form/secadora-form.component.html
+++ b/frontend/src/app/views/secadora/secadora-form/secadora-form.component.html
@@ -16,6 +16,11 @@
         <input matInput type="string" [(ngModel)]="secadora.modelo" name="modelo" required>
     </mat-form-field>
 
+    <mat-form-field>
+        <mat-label>Peso Máximo</mat-label>
+        <input matInput type="number" [(ngModel)]="secadora.peso_maximo" name="peso_maximo" required>
+    </mat-form-field>
+
     <mat-toolbar class="form-buttons">
         <mat-toolbar-row>
             <button mat-raised-button type="submit" color="accent">
